--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "2.5.7",
     "font-awesome": "^4.7.0",
     "ng2-charts": "1.6.0",
+    "ngx-gauge": "^1.0.0-beta.7",
     "rxjs": "6.3.3",
     "yarn": "1.12.1",
     "zone.js": "0.8.26"
